/**
 * Copyright 2024 AntGroup CO., Ltd.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 */

syntax = "proto3";
package bolt_raft;

message RaftRequest {
  uint64 id      = 1;
  string user    = 2;
  bytes raw_data = 3;
}

message NodeInfo {
  uint64 node_id  = 1;
  string ip       = 2;
  int32 bolt_port = 3;
  int32 bolt_raft_port = 4;
  bool is_leader       = 5;
}

message NodeInfos {
  map<uint64, NodeInfo> nodes = 1;
}
